--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,7 +75,42 @@
     "mutex": "cpp",
     "iostream": "cpp",
     "iosfwd": "cpp",
-    "new": "cpp"
+    "new": "cpp",
+    "random": "cpp",
+    "array": "cpp",
+    "regex": "cpp",
+    "thread": "cpp",
+    "atomic": "cpp",
+    "cctype": "cpp",
+    "chrono": "cpp",
+    "clocale": "cpp",
+    "cstdarg": "cpp",
+    "cstddef": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "ctime": "cpp",
+    "cwchar": "cpp",
+    "cwctype": "cpp",
+    "exception": "cpp",
+    "functional": "cpp",
+    "iterator": "cpp",
+    "memory": "cpp",
+    "memory_resource": "cpp",
+    "optional": "cpp",
+    "ratio": "cpp",
+    "set": "cpp",
+    "system_error": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "utility": "cpp",
+    "fstream": "cpp",
+    "initializer_list": "cpp",
+    "istream": "cpp",
+    "limits": "cpp",
+    "stdexcept": "cpp",
+    "streambuf": "cpp",
+    "typeinfo": "cpp"
   },
   "Lingma.cloudModelEnable": false,
   "git-blame.configs.statusBar.length": "short"
